--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,32 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
+  firebase_core: ^1.14.1
+  firebase_core_web: ^1.6.2
+  cloud_firestore: ^3.1.12
+  bloc: ^8.0.3
+  flutter_bloc: ^8.0.1
+  flutterfire_ui: ^0.4.0+4
+  firebase_auth: ^3.3.16
+  rive: ^0.8.4
+  dio: ^4.0.6
+  flutter_facebook_auth: ^4.3.4
+  google_sign_in: ^5.3.2
+  intl: ^0.17.0
+  json_annotation: ^4.5.0
+  injectable: ^1.5.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  bloc_test: ^9.0.3
+  build_runner: ^2.1.7
+  json_serializable: ^6.1.4
+  freezed: ^1.1.1
+  retrofit_generator: ^4.0.1
+  injectable_generator: ^1.5.3
+  flutter_launcher_icons: ^0.9.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
