--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.5.0
   injectable: ^1.5.3
+  freezed_annotation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
