--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get_it: ^7.2.0
   flutter_localizations:
     sdk: flutter
+  awesome_snackbar_content: ^0.0.5  
 
 
 dev_dependencies:
