--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   awesome_snackbar_content: ^0.0.5  
+  flutter_native_splash: ^2.2.11
+  flutter_launcher_icons: ^0.10.0
 
 
 dev_dependencies:
@@ -46,8 +48,21 @@ dev_dependencies:
   freezed: ^1.1.1
   retrofit_generator: ^4.0.1
   injectable_generator: ^1.5.3
-  flutter_launcher_icons: ^0.9.2
 
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/logo.png
+
+
+flutter_icons:
+  android: "wms"
+  ios: true
+  image_path: assets/logo.png
+  background_color: "#FFFFFF"
+  min_sdk_android: 21    
