style(pages): change font size

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
         "flutterfire",
         "gratefuls",
         "interps",
+        "logowanie",
+        "rejestracja",
         "Responde",
         "Schyler",
+        "snackbars",
         "wellfleet"
     ]
 }
