--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "bools",
         "cupertino",
         "flutterfire",
         "gratefuls",
         "interps",
         "logowanie",
+        "overriden",
         "prefs",
         "rejestracja",
         "Responde",
