--- a/packages/api_client/pubspec.yaml
+++ b/packages/api_client/pubspec.yaml
@@ -7,12 +7,11 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  cloud_firestore: ^3.1.14
-  firebase_messaging: ^13.1.0
+  cloud_firestore: ^4.8.2
+  firebase_messaging: ^14.6.4
   flutter:
     sdk: flutter
-
-  http: ^0.13.5
+  http: ^1.1.0
   json_annotation: ^4.7.0
   uuid: ^3.0.6
 
@@ -22,4 +21,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
-  very_good_analysis: ^3.1.0
+  very_good_analysis: ^5.0.0+1
