--- a/packages/authentication_repository/pubspec.yaml
+++ b/packages/authentication_repository/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
   cache:
     path: ../cache
   equatable: ^2.0.3
-  firebase_auth: ^3.0.2
-  firebase_core: ^1.5.0
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
   flutter:
     sdk: flutter
-  flutter_facebook_auth: ^5.0.6
-  google_sign_in: ^5.0.7
+  flutter_facebook_auth: ^6.0.0
+  google_sign_in: ^6.1.4
   meta: ^1.3.0
 
 
@@ -25,5 +25,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mocktail: ^0.2.0
-  very_good_analysis: ^3.1.0
+  mocktail: ^0.3.0
+  very_good_analysis: ^5.0.0+1
