--- a/packages/users_repository/pubspec.yaml
+++ b/packages/users_repository/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  intl: ^0.17.0 
+  intl: ^0.18.1 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^3.1.0
+  very_good_analysis: ^5.0.0+1
