--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutterfire_ui: ^0.4.0+4
   firebase_auth: ^4.6.3
-  rive: ^0.11.3
   dio: ^5.2.1+1
-  flutter_facebook_auth: ^4.3.4
-  google_sign_in: ^5.3.2
   intl: ^0.18.0
   json_annotation: ^4.5.0
   injectable: ^2.1.2
@@ -37,6 +34,9 @@ dependencies:
   flutter_native_splash: ^2.2.11
   flutter_launcher_icons: ^0.13.1
   shared_preferences: ^2.1.2
+  font_awesome_flutter: ^10.4.0
+  l10n_flutter: ^1.0.7
+  flutter_gen: ^5.3.1
 
 
 dev_dependencies:
@@ -66,6 +66,7 @@ flutter:
           weight: 800
         - asset: assets/fonts/Nunito-Black.ttf
           weight: 800
+
         - asset: assets/fonts/Nunito-ExtraBoldItalic.ttf
           style: italic
           weight: 800
