--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   l10n_flutter: ^1.0.7
   flutter_gen: ^5.3.1
+  flutter_localization: ^0.1.12
 
 
 dev_dependencies:
@@ -55,48 +56,6 @@ flutter:
   generate: true
   assets:
     - assets/
-  fonts:
-    - family: Nunito
-      fonts:
-        - asset: assets/fonts/Nunito-Regular.ttf
-        - asset: assets/fonts/Nunito-Italic.ttf
-          style: italic
-        - asset: assets/fonts/Nunito-BlackItalic.ttf
-          style: italic
-          weight: 800
-        - asset: assets/fonts/Nunito-Black.ttf
-          weight: 800
-
-        - asset: assets/fonts/Nunito-ExtraBoldItalic.ttf
-          style: italic
-          weight: 800
-        - asset: assets/fonts/Nunito-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/Nunito-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Nunito-BoldItalic.ttf
-          style: italic
-          weight: 700
-        - asset: assets/fonts/Nunito-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Nunito-SemiBoldItalic.ttf
-          style: italic
-          weight: 600
-        - asset: assets/fonts/Nunito-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Nunito-MediumItalic.ttf
-          style: italic
-          weight: 500
-        - asset: assets/fonts/Nunito-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Nunito-LightItalic.ttf
-          style: italic
-          weight: 300
-        - asset: assets/fonts/Nunito-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/Nunito-ExtraLightItalic.ttf
-          style: italic
-          weight: 200
 
           
 flutter_native_splash:
